fixing title image size to work on mobile phones

--- a/site/stories/components/BannerImage/BannerImage.scss
+++ b/site/stories/components/BannerImage/BannerImage.scss
@@ -17,10 +17,12 @@
             color: $white;
 
             font-weight: 800;
-            font-size: 2.5rem;
+            font-size: 2rem;
             max-width: 80%;
          
-
+            @include media-breakpoint-up(sm) {
+                font-size: 2.5rem;
+            }
             @include media-breakpoint-up(md) {
                 font-size: 4rem;
             }
@@ -33,9 +35,12 @@
             color: $white;
 
             font-weight: 800;
-            font-size: 1.5rem;
+            font-size: 1.25rem;
             max-width: 80%;
 
+            @include media-breakpoint-up(sm) {
+                font-size: 1.5rem;
+            }
             @include media-breakpoint-up(md) {
                 font-size: 1.75rem;
             }
